force-app/main/default/objects/Product_Bundle__c/Product_Bundle__c.object-meta.xml
<CustomObject>
    <description>Used in Z-Quoting to create product rate plan groupings</description>
    <label>Product Bundle</label>
    <nameField>
        <label>Product Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>