force-app/main/default/objects/Product_Bundle__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Categorize the bundles so they are grouped on the selection page</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Default Pricing</fullName>
            </value>
            <value>
                <fullName>Conversion Sales</fullName>
            </value>
            <value>
                <fullName>NCR Add-On Packages</fullName>
            </value>
            <value>
                <fullName>Consumer Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>